--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,1 +1,21 @@
-AddType text/html .html
+# Enable the rewrite engine
+RewriteEngine On
+
+# Ensure correct MIME types are set
+AddType text/html .html .htm
+AddType text/css .css
+AddType text/javascript .js
+AddType image/jpeg .jpg .jpeg
+AddType image/png .png
+AddType image/gif .gif
+
+# Force text/html for common file types
+<FilesMatch "\.(htm|html|php)$">
+    ForceType text/html
+</FilesMatch>
+
+# Prevent downloading of specific file types
+<FilesMatch "\.(htm|html|php|js|css)$">
+    ForceType text/html
+    Header set Content-Disposition inline
+</FilesMatch>
