--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,21 +1,21 @@
-# Enable the rewrite engine
-RewriteEngine On
 
 # Ensure correct MIME types are set
 AddType text/html .html .htm
 AddType text/css .css
-AddType text/javascript .js
-AddType image/jpeg .jpg .jpeg
-AddType image/png .png
-AddType image/gif .gif
+AddType application/javascript .js
 
-# Force text/html for common file types
-<FilesMatch "\.(htm|html|php)$">
+# Force text/html for HTML files
+<FilesMatch "\.(htm|html)$">
     ForceType text/html
+    Header set Content-Type "text/html; charset=UTF-8"
 </FilesMatch>
 
-# Prevent downloading of specific file types
-<FilesMatch "\.(htm|html|php|js|css)$">
-    ForceType text/html
-    Header set Content-Disposition inline
+# Prevent caching for HTML files
+<FilesMatch "\.(htm|html)$">
+    Header set Cache-Control "no-cache, no-store, must-revalidate"
+    Header set Pragma "no-cache"
+    Header set Expires 0
 </FilesMatch>
+
+# Enable CORS for all resources
+Header set Access-Control-Allow-Origin "*"
